Align header items to prevent misaligning

--- a/src/components/organisms/Header/Header.module.css
+++ b/src/components/organisms/Header/Header.module.css
@@ -3,6 +3,7 @@ header {
   border-bottom: 1px solid var(--neutrals-extra-light);
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 16px;
 
   .logo {
